added client side authentication

--- a/src/components/Clock/Clock.scss
+++ b/src/components/Clock/Clock.scss
@@ -27,6 +27,7 @@
 .clock-timer-row{
     height: 55%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     h1{
